Revision history for {{$dist->name}}

{{$NEXT}}

1.56      2014-09-20 07:29:30 -0400
  - update default .travis.yml to use verbose testing

1.55      2014-09-20 07:25:48 -0400
  - update default .travis.yml to use 5.20, and dzil instead of prove

1.54      2014-07-31 09:30:24 -0400
  - check .travis.yml for Perl 5.19 or 5.20 as appropriate

1.53      2014-07-06 09:25:17 -0400
  - require more recent Role::Tiny where used

1.52      2014-06-13 11:21:43 -0400
  - added [Author::Plicease::SpecialPrereqs]

1.51      2014-06-13 08:10:39 -0400
  - add prereq Test::More 0.94 to all dists
    I use subtest a lot

1.50      2014-06-10 07:53:11 -0400
  - added [Author::Plicease::Resources] and am
    using it for [@Author::Plicease] now.  This was
    needed to allow the repo for Alien-Libarchive be
    named Alien-Libarchive2
  - fixed .travis.yml template

1.49      2014-05-22 07:45:40 -0400
  - make this distribution properly dynamic
  - include [ACPS::RPM] in bundle, if it is there
  - turn off (by default) unused_vars.t for old dists

1.48      2014-04-30 13:23:38 -0400
  - don't include developer prereqs in diagnostic

1.47      2014-04-16 02:26:37 -0400
  - update .travis.yml template to reflect my current usage
  - fixed tempalte release.yml

1.46      2014-04-10 13:27:07 -0400
  - add to standard diagnostic
  - assume installer = ModuleBuild and mb_class = My::ModuleBuild if inc/My/ModuleBuild.pm is found
  - whitelist some commonly used tech spellings to pod system spelling test
  - add unused_vars.t release test
  - ability to skip some release tests from xt/release/release.yml

1.45      2014-04-08 11:04:49 -0400
  - allow override of diagnostic reporter with [Test] diag = +/-module or [@ACPS] diag = +/-module

1.44      2014-02-21 16:02:07 -0500
  - diagnostic doesn't preload EV unless it is a suggested prereq

1.43      2013-12-31 12:28:13 -0500
  - look for inc/run for scripted phase hooks

1.42      2013-12-21 17:09:01 -0500
  - slim down the prereqs.
